--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,6 +18,16 @@ on:
         # The data type of the input
         type: string
 
+      query:
+        # Friendly description to be shown in the UI instead of 'name'
+        description: 'Query a testar'
+        # Default value if no value is explicitly provided
+        default: 'create.sql'
+        # Input has to be provided for the workflow to run
+        required: true
+        # The data type of the input
+        type: string
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "greet"
@@ -30,3 +40,4 @@ jobs:
     # Runs a single command using the runners shell
     - name: Send greeting
       run: mysql -u gestor -p Abcd1234 -h ${{ input.name }}
+           mysql -u username -p < ${{ input.query }}
