--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -42,4 +42,4 @@ jobs:
     - name: check folder
       run: ls -l
     - name: Send greeting
-      run: mysql -u gestor -p Abcd1234 -h ${{ github.event.inputs.name }} < ${{ github.event.inputs.query }}
+      run: mysql -u gestor -p'Abcd1234' -h ${{ github.event.inputs.name }} < ${{ github.event.inputs.query }}
